--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE HTML>
+<!--
 /**
 *
 * Copyright 2012 Adobe Systems Inc.;
@@ -15,3 +17,15 @@
 * limitations under the License.
 *
 */
+-->
+<html>
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" href="css/topcoat-textarea.css" type="text/css" media="screen" charset="utf-8">
+    <title>Topcoat Textarea</title>
+</head>
+<body>
+    <textarea class="topcoat-textarea" rows="6" cols="36" placeholder="Textarea"></textarea>
+    <textarea class="topcoat-textarea--large" rows="6" cols="36" placeholder="Textarea"></textarea>
+</body>
+</html>
