--- a/demo/topcoat-textarea-mobile-light.html
+++ b/demo/topcoat-textarea-mobile-light.html
@@ -6,12 +6,12 @@
     <title>Topcoat</title>
     <meta name="viewport" content="user-scalable=no,initial-scale = 1.0,maximum-scale = 1.0">
     <link rel="stylesheet" type="text/css" href="fonts/stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="../css/topcoat-textarea-desktop-dark.css">
+    <link rel="stylesheet" type="text/css" href="../css/topcoat-textarea-mobile-light.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/brackets.css"><!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   </head>
-  <body class="dark">
+  <body class="light">
     <div id="wrapper">
       <div class="max-width">
         <div id="sideNav">
@@ -22,10 +22,10 @@
           </nav>
           <div class="combo">
             <select class="docNav">
-              <option value="index.html" selected="selected">Topcoat Textarea Desktop Dark</option>
+              <option value="index.html">Topcoat Textarea Desktop Dark</option>
               <option value="topcoat-textarea-desktop-light.html">Topcoat Textarea Desktop Light</option>
               <option value="topcoat-textarea-mobile-dark.html">Topcoat Textarea Mobile Dark</option>
-              <option value="topcoat-textarea-mobile-light.html">Topcoat Textarea Mobile Light</option>
+              <option value="topcoat-textarea-mobile-light.html" selected="selected">Topcoat Textarea Mobile Light</option>
             </select>
           </div>
           <div id="pageNav">
@@ -66,17 +66,17 @@
                   <h3>CSS</h3>
                   <pre class="css"><code data-language="css">.topcoat-textarea,
 .topcoat-textarea--large {
-  padding: 1rem;
-  font-size: 1rem;
+  padding: 2rem;
+  font-size: 2.5rem;
   font-weight: 200;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  line-height: 2rem;
-  border: 1px solid rgba(0,0,0,0.36);
-  background-color: #595b5b;
-  -webkit-box-shadow: inset 0 1px rgba(0,0,0,0.18);
-  box-shadow: inset 0 1px rgba(0,0,0,0.18);
-  color: #c6c8c8;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  line-height: 3rem;
+  border: 1px solid #a5a8a8;
+  background-color: #e5e9e8;
+  -webkit-box-shadow: inset 0 1px rgba(0,0,0,0.12);
+  box-shadow: inset 0 1px rgba(0,0,0,0.12);
+  color: #454545;
 }
 .topcoat-textarea:focus,
 .topcoat-textarea--large:focus {
@@ -102,8 +102,8 @@
                 <div>
                   <h3>CSS</h3>
                   <pre class="css"><code data-language="css">.topcoat-textarea--large {
-  font-size: 1.3rem;
-  line-height: 2.6rem;
+  font-size: 3rem;
+  line-height: 4rem;
 }
 </code></pre>
                 </div>
