--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" href="css/topcoat-textarea.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="css/topcoat-textarea-mobile-dark.css" type="text/css" media="screen" charset="utf-8">
     <title>Topcoat Textarea</title>
 </head>
 <body>
