Updating dependencies. Matching new vars from theme. Adding more tests.

--- a/demo/topcoat-textarea-desktop-light.html
+++ b/demo/topcoat-textarea-desktop-light.html
@@ -68,10 +68,10 @@
 .topcoat-textarea--large {
   padding: 1rem;
   font-size: 1rem;
-  font-weight: 200;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  line-height: 2rem;
+  font-weight: 400;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  line-height: 1.313rem;
   border: 1px solid #a5a8a8;
   background-color: #e5e9e8;
   -webkit-box-shadow: inset 0 1px rgba(0,0,0,0.12);
@@ -80,7 +80,7 @@
 }
 .topcoat-textarea:focus,
 .topcoat-textarea--large:focus {
-  background-color: #fff;
+  background-color: #edf1f1;
   color: #000;
 }</code></pre>
                 </div>
@@ -103,7 +103,7 @@
                   <h3>CSS</h3>
                   <pre class="css"><code data-language="css">.topcoat-textarea--large {
   font-size: 1.3rem;
-  line-height: 2.6rem;
+  line-height: 1.688rem;
 }
 </code></pre>
                 </div>
