--- a/demo/topcoat-textarea-mobile-dark.html
+++ b/demo/topcoat-textarea-mobile-dark.html
@@ -72,7 +72,7 @@
   -webkit-border-radius: 6px;
   border-radius: 6px;
   line-height: 3rem;
-  border: 1px solid rgba(0,0,0,0.36);
+  border: 1px solid #303233;
   background-color: #595b5b;
   -webkit-box-shadow: inset 0 1px rgba(0,0,0,0.18);
   box-shadow: inset 0 1px rgba(0,0,0,0.18);
@@ -80,8 +80,8 @@
 }
 .topcoat-textarea:focus,
 .topcoat-textarea--large:focus {
-  background-color: #fff;
-  color: #000;
+  background-color: #646666;
+  color: #fff;
 }</code></pre>
                 </div>
               </section>
@@ -103,7 +103,7 @@
                   <h3>CSS</h3>
                   <pre class="css"><code data-language="css">.topcoat-textarea--large {
   font-size: 3rem;
-  line-height: 4rem;
+  line-height: 4.375rem;
 }
 </code></pre>
                 </div>
