--- a/demo/index.html
+++ b/demo/index.html
@@ -68,11 +68,11 @@
 .topcoat-textarea--large {
   padding: 1rem;
   font-size: 1rem;
-  font-weight: 200;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  line-height: 2rem;
-  border: 1px solid rgba(0,0,0,0.36);
+  font-weight: 400;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  line-height: 1.313rem;
+  border: 1px solid #303233;
   background-color: #595b5b;
   -webkit-box-shadow: inset 0 1px rgba(0,0,0,0.18);
   box-shadow: inset 0 1px rgba(0,0,0,0.18);
@@ -80,8 +80,8 @@
 }
 .topcoat-textarea:focus,
 .topcoat-textarea--large:focus {
-  background-color: #fff;
-  color: #000;
+  background-color: #646666;
+  color: #fff;
 }</code></pre>
                 </div>
               </section>
@@ -103,7 +103,7 @@
                   <h3>CSS</h3>
                   <pre class="css"><code data-language="css">.topcoat-textarea--large {
   font-size: 1.3rem;
-  line-height: 2.6rem;
+  line-height: 1.688rem;
 }
 </code></pre>
                 </div>
