--- a/demo/topcoat-textarea-mobile-light.html
+++ b/demo/topcoat-textarea-mobile-light.html
@@ -80,7 +80,7 @@
 }
 .topcoat-textarea:focus,
 .topcoat-textarea--large:focus {
-  background-color: #fff;
+  background-color: #edf1f1;
   color: #000;
 }</code></pre>
                 </div>
@@ -103,7 +103,7 @@
                   <h3>CSS</h3>
                   <pre class="css"><code data-language="css">.topcoat-textarea--large {
   font-size: 3rem;
-  line-height: 4rem;
+  line-height: 4.375rem;
 }
 </code></pre>
                 </div>
