updated theme, and fixed focus

--- a/demo/topcoat-textarea-mobile-light.html
+++ b/demo/topcoat-textarea-mobile-light.html
@@ -64,38 +64,43 @@
                 </div>
                 <div>
                   <h3>CSS</h3>
-                  <pre class="css"><code data-language="css">.topcoat-textarea,
+                  <pre class="css"><code data-language="css">
+.topcoat-textarea,
 .topcoat-textarea--large {
   padding: 2rem;
   font-size: 2.5rem;
-  font-weight: 200;
-  -webkit-border-radius: 6px;
+  font-weight: 400;
   border-radius: 6px;
   line-height: 3rem;
-  border: 1px solid #a5a8a8;
-  background-color: #d3d7d7;
-  -webkit-box-shadow: inset 0 1px rgba(0,0,0,0.12);
-  box-shadow: inset 0 1px rgba(0,0,0,0.12);
+  border: 1px solid #9daca9;
+  background-color: #fff;
+  -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.23);
+  box-shadow: inset 0 1px 0 rgba(0,0,0,0.23);
   color: #454545;
   letter-spacing: 1px;
 }
+
 .topcoat-textarea:focus,
 .topcoat-textarea--large:focus {
-  background-color: #edf1f1;
-  color: #000;
-  border: 1px solid #0940fd;
-  -webkit-box-shadow: 0 0 0 2px #6fb5f1;
-  box-shadow: 0 0 0 2px #6fb5f1;
+  background-color: #fff;
+  color: #454545;
+  border: 1px solid #0036ff;
+  -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.23), 0 0 0 2px #6fb5f1;
+  box-shadow: inset 0 1px 0 rgba(0,0,0,0.23), 0 0 0 2px #6fb5f1;
 }
+
 .topcoat-textarea:disabled::-webkit-input-placeholder {
-  color: #000;
+  color: #454545;
 }
+
 .topcoat-textarea:disabled::-moz-placeholder {
-  color: #000;
+  color: #454545;
 }
+
 .topcoat-textarea:disabled:-ms-input-placeholder {
-  color: #000;
-}</code></pre>
+  color: #454545;
+}
+</code></pre>
                 </div>
               </section>
             </footer>
@@ -114,23 +119,27 @@
                 </div>
                 <div>
                   <h3>CSS</h3>
-                  <pre class="css"><code data-language="css">.topcoat-textarea--large {
+                  <pre class="css"><code data-language="css">
+.topcoat-textarea--large {
   font-size: 3rem;
   line-height: 4.375rem;
 }
+
 .topcoat-textarea--large:disabled {
-  color: #000;
+  color: #454545;
 }
+
 .topcoat-textarea--large:disabled::-webkit-input-placeholder {
-  color: #000;
+  color: #454545;
 }
+
 .topcoat-textarea--large:disabled::-moz-placeholder {
-  color: #000;
+  color: #454545;
 }
+
 .topcoat-textarea--large:disabled:-ms-input-placeholder {
-  color: #000;
-}
-</code></pre>
+  color: #454545;
+}</code></pre>
                 </div>
               </section>
             </footer>
